samples/_failures_safe/1761214045_19261e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbf70a0e.c: In function ‘main’:
./samples/SAFE/__tmp_fbf70a0e.c:182:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  182 |     TokenArray* tokens
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_fbf70a0e.c:182:5: error: expected declaration or statement at end of input
